<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="96dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        tools:text="Name" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="206dp"
        android:layout_height="49dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="49dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/edit_name"
        android:inputType="textPersonName"
        android:text="@string/edit_name"
        android:textColor="#887E7E"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="338dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="547dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.538">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/boy"
            tools:text="boy" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/girl"
            tools:text="girl" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="106dp"
            android:layout_height="32dp"
            android:text="@string/Switch"
            tools:text="switch" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="340dp"
        android:layout_height="52dp"
        android:layout_marginEnd="2dp"
        android:entries="@array/city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.073" />

</androidx.constraintlayout.widget.ConstraintLayout>